fix: BCEL use explicit no-arg constructor via getConstructor() to avoid argument type mismatch